Fixed Missing Close icon, adjusted background opacity to makeit darker and adjusted css to align youtube button at the center of the video thumbnail

--- a/css/front_styles.css
+++ b/css/front_styles.css
@@ -548,7 +548,7 @@ article.stories .entry-meta a.read-more, article.stories .entry-meta a.read-more
   */
   height:100%;
 }
-.stry-video-overlay div{ box-sizing: border-box; }
+#stry-video-overlay div{ box-sizing: border-box; }
 .stry-video-table{
   display: table;
   margin: 0px auto;
@@ -593,14 +593,14 @@ a.stry-video-close {
     display: block;
     position: absolute;
     right: 0px;
-    top: 0px;
+    top: 60px;
     width: 42px;
     height: 42px;
     z-index: 9999;
     color: #fff;
 }
 a.stry-video-close:hover{ color: #fff !important; }
-.stry-video-overlay {
+#stry-video-overlay {
     z-index: 9999;
     position: fixed;
     top: 0px;
@@ -609,7 +609,7 @@ a.stry-video-close:hover{ color: #fff !important; }
     bottom: 0px;
     min-width: 100%;
     min-height: 100%;
-    background-color: rgba(0,0,0,.8);
+    background-color: rgba(0,0,0,.65);
     padding: 10px;
     box-sizing: border-box;
 }
@@ -628,15 +628,15 @@ a.stry-video-close span.dashicons:before {font-size: 42px !important; width: 42p
 }
 .stry-video-avatar-table {
     position: absolute;
-    display: table;
-    top: 0px;
+    /*display: table;*/
+    top: 41%;
     left: 0px;
     width: 100%;
-    height: 100%;
+    /*height: 100%;*/
 }
 .stry-video-avatar-cell {
-    display: table-cell;
-    vertical-align: middle;
+    /*display: table-cell;*/
+    /*vertical-align: middle;*/
     text-align: center;
 }
 .stry-video-avatar-cell .stry-youtube-play,
@@ -650,7 +650,7 @@ a.stry-video-close span.dashicons:before {font-size: 42px !important; width: 42p
     -o-transition: all 0.2s;
     transition: all 0.2s;
 }
-.stry-video-avatar-cell .stry-youtube-play {color: #ffffff;}
+.stry-video-avatar-cell .stry-youtube-play {color: #ffffff; margin: 0px auto;}
 .stry-video-avatar-cell:hover .stry-youtube-play {color: #ff0000;}
 .stry-video-avatar-cell .stry-vimeo-play {color: #ffffff;}
 .stry-video-avatar-cell:hover .stry-vimeo-play {color: #2d95df;}
